// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update TuiTableDirectionOrder migrates dynamic [directionOrder] binding and removes tuiDirectionOrder marker: test.html 1`] = `
{
  "0. Before": "
                <table
                    tuiDirectionOrder
                    tuiTable
                    [directionOrder]="directionOrder"
                    (directionOrderChange)="onOrderChange($event)"
                >
                    <tbody></tbody>
                </table>
            ",
  "1. After": "
                <table
                    
                    tuiTable
                    [direction]="directionOrder"
                    (directionChange)="onOrderChange($event)"
                >
                    <tbody></tbody>
                </table>
            ",
}
`;

exports[`ng-update TuiTableDirectionOrder migrates static [directionOrder] values to TuiSortDirection numbers: test.html 1`] = `
{
  "0. Before": "
                <table
                    tuiDirectionOrder
                    tuiTable
                    [directionOrder]="'asc'"
                >
                    <tbody></tbody>
                </table>
                <table
                    tuiDirectionOrder
                    tuiTable
                    [directionOrder]="'desc'"
                >
                    <tbody></tbody>
                </table>
            ",
  "1. After": "
                <table
                    
                    tuiTable
                    [direction]="1"
                >
                    <tbody></tbody>
                </table>
                <table
                    
                    tuiTable
                    [direction]="-1"
                >
                    <tbody></tbody>
                </table>
            ",
}
`;

exports[`ng-update TuiTableDirectionOrder migrates two-way [(directionOrder)] binding: test.html 1`] = `
{
  "0. Before": "
                <table
                    tuiDirectionOrder
                    tuiTable
                    [(directionOrder)]="directionOrder"
                >
                    <tbody></tbody>
                </table>
            ",
  "1. After": "
                <table
                    
                    tuiTable
                    [(direction)]="directionOrder"
                >
                    <tbody></tbody>
                </table>
            ",
}
`;
